--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,3 +3,6 @@ steps:
     args: ['-m', 'rsync', '-r', '.', 'gs://sachints_dev']
   - name: 'gcr.io/cloud-builders/gsutil'
     args: ['setmeta', '-h', 'Cache-Control:no-cache,max-age=0', 'gs://sachints_dev/**']
+
+options:
+  logging: CLOUD_LOGGING_ONLY
